--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/blob": "^0.25.1",
+    "node-appwrite": "^13.0.0",
     "next": "14.2.15",
     "react": "18.3.1",
     "react-dom": "18.3.1"
@@ -23,4 +23,3 @@
     "typescript": "5.6.3"
   }
 }
-
