--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "node-appwrite": "^13.0.0",
+    "@types/qrcode": "^1.5.6",
     "next": "14.2.15",
+    "node-appwrite": "^13.0.0",
+    "qrcode": "^1.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
