--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/qrcode": "^1.5.6",
+    "@vercel/speed-insights": "^1.2.0",
     "next": "14.2.15",
     "node-appwrite": "^13.0.0",
     "qrcode": "^1.5.4",
