--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check-glob-safe": "node scripts/check-glob-safe.js"
   },
   "dependencies": {
     "@types/qrcode": "^1.5.6",
@@ -24,5 +25,8 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.15",
     "typescript": "5.6.3"
+  },
+  "overrides": {
+    "glob": "^10.5.0"
   }
 }
